fixed size of company names in experience section on mobile

--- a/personal-website/src/components/layout/Experience.scss
+++ b/personal-website/src/components/layout/Experience.scss
@@ -229,4 +229,28 @@
     width: 100%;
     margin-top: 20px;
   }
+
+  .text-white h4 {
+    font-size: 22px;
+  }
+
+  .text-white h5 {
+    font-size: 12px;
+  }
+
+  .text-white p {
+    font-size: 10px;
+  }
+
+  .text-black h4 {
+    font-size: 22px;
+  }
+
+  .text-black h5 {
+    font-size: 12px;
+  }
+
+  .text-black p {
+    font-size: 10px;
+  }
 }
